# picode

./: .gitignore  LICENSE  README.md  SYSTEM.md  index.html  package.json  persistence_test.txt  test_overflow.html  tsconfig.json  vite.config.ts
pi-runtime/: tsconfig.json
pi-runtime/src/: approval-extension.ts  auth.ts  bootstrap.ts  main.ts  protocol.ts  session-manager.ts
scripts/: build-dmg.ts  build-pi-runtime.ts  release-nightly.ts  release-stable.ts  release-utils.ts
src/: main.tsx  test-icons.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  picode-icon-dark.icns
src-tauri/icons/picode-icon-dark.icon/: icon.json
src-tauri/src/: git.rs  main.rs  models.rs  pi.rs  storage.rs  terminal.rs
src/app/: providers.tsx  router.tsx
src/components/action/: AddActionModal.tsx
src/components/chat/: ActivityBlock.tsx  ConversationView.tsx  FilesChangedBlock.tsx  ImageAttachmentGallery.tsx  MarkdownRenderer.tsx  PlanCard.tsx  QuestionComposer.tsx  TimelineItemView.tsx  ToolActivityGroup.tsx  WorkedForBlock.tsx  chatRuntime.test.ts  chatRuntime.ts  questionComposerLogic.test.ts  questionComposerLogic.ts
src/components/command/: CommandPalette.tsx
src/components/diff/: DiffViewer.tsx
src/domains/: types.ts
src/lib/: clipboard.ts  keyboardShortcuts.ts  messageImages.ts  tauri.ts  themes.ts
src/services/: piBridge.ts  terminalBridge.ts
src/state/: sessionUndo.test.ts  sessionUndo.ts  useAppStore.ts
src/styles/: app.css
(+12 files in other folders)
